openshift-cel/disallow-security-context-constraint-anyuid/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: check-routes
policies:
- ../disallow-security-context-constraint-anyuid.yaml
resources:
- resources.yaml
results:
- kind: ClusterRole
  policy: disallow-security-context-constraint-anyuid
  resources:
  - secret-reader-anyuid-use
  - secret-reader-anyuid-all
  result: fail
  rule: check-security-context-constraint
- kind: Role
  policy: disallow-security-context-constraint-anyuid
  resources:
  - pod-role-anyuid-use
  - pod-role-anyuid-all
  result: fail
  rule: check-security-context-constraint
- kind: ClusterRole
  policy: disallow-security-context-constraint-anyuid
  resources:
  - secret-reader
  result: pass
  rule: check-security-context-constraint
- kind: Role
  policy: disallow-security-context-constraint-anyuid
  resources:
  - pod-role
  result: pass
  rule: check-security-context-constraint
- kind: ClusterRoleBinding
  policy: disallow-security-context-constraint-anyuid
  resources:
  - clusterrolebinding-anyuid
  result: fail
  rule: check-security-context-roleref
- kind: RoleBinding
  policy: disallow-security-context-constraint-anyuid
  resources:
  - rolebinding-anyuid
  result: fail
  rule: check-security-context-roleref
- kind: ClusterRoleBinding
  policy: disallow-security-context-constraint-anyuid
  resources:
  - clusterrolebinding-test
  result: pass
  rule: check-security-context-roleref
- kind: RoleBinding
  policy: disallow-security-context-constraint-anyuid
  resources:
  - rolebinding-test
  result: pass
  rule: check-security-context-roleref
